tests/NormalTests/paczka1/fuzzy1/45604465.err
Error in line 2: hdwdg S388 54,2
Error in line 6: ekXN S863 58,2
Error in line 9: S388 A167 60,4
Error in line 19: S388 S863 26,4
Error in line 32: z86slU S388 90,1
Error in line 30: hdwdg S213 1,8
